add persistent storage to grafana+prometheus containers

--- a/polkadot-validator/ansible/main.yaml
+++ b/polkadot-validator/ansible/main.yaml
@@ -15,4 +15,4 @@
   import_playbook: deploy_monitoring.yaml
 
 - name: Create Syntropy Network
-  import_playbook: deploy_monitoring.yaml
+  import_playbook: deploy_network.yaml
