--- a/elrond/main.yml
+++ b/elrond/main.yml
@@ -1,5 +1,5 @@
-SYNTROPY_AGENT_API_KEY: "RLaza4XjoaFUlmgFAACDJzzfnsDdRJKP"
+SYNTROPY_AGENT_API_KEY: "YOUR_AGENT_KEY"
 SYNTROPY_CONTROLLER_URL: "https://controller-prod-server.syntropystack.com"
-SYNTROPY_USERNAME: "magelinskasz@gmail.com"
-SYNTROPY_PASSWORD: "L^WxTmvoR*93"
+SYNTROPY_USERNAME: "YOUR_EMAIL"
+SYNTROPY_PASSWORD: "YOUR_PASSWORD"
 
