--- a/ethereum2.0/ansible/roles/deploy_prometheus/files/prometheus.yml
+++ b/ethereum2.0/ansible/roles/deploy_prometheus/files/prometheus.yml
@@ -6,3 +6,6 @@ scrape_configs:
   - job_name: "beacon node"
     static_configs:
       - targets: ["10.51.2.5:8080"]
+  - job_name: "validator"
+    static_configs:
+      - targets: ["10.51.2.6:8080"]
